Fix welcome font size on mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -98,9 +98,9 @@ h2:first-of-type {
     font-size: 1.2rem;
 }
 .info > ul {
-    margin-top: 0.5rem;
+    margin-top: 0.4rem;
     opacity: 0.7;
-    font-size: 1.2rem;
+    font-size: 1rem;
 }
 .info > h3 {
     font-size: 2rem;
